hphp/hack/test/typecheck/classname/classname_usage.php.like_types.exp
File "classname_usage.php", line 80, characters 3-15:
  ~string
File "classname_usage.php", line 85, characters 3-16:
  ~classname<T>
File "classname_usage.php", line 87, characters 3-15:
  ~string
File "classname_usage.php", line 36, characters 10-13:
Invalid return type (Typing[4110])
File "classname_usage.php", line 31, characters 45-47:
Expected int
File "classname_usage.php", line 34, characters 5-21:
But got num because this is the result of an arithmetic operation with a num as the first argument, and no floats.
File "classname_usage.php", line 34, characters 5-21:
Here is why I think the argument is a num: this is a num because this is the result of an arithmetic operation
